    false positives for files that would have gone into packages not
    included in the current build, for example libgtk-3-common during
    an amd64-only build.
  * d/tests: Also mark reftests as flaky due to a known failure:
    symbolic-icon-translucent-color appears to have regressed and now
    differs from the reference by 1 column of pixels

 -- Simon McVittie <smcv@debian.org>  Sun, 30 Sep 2018 14:50:10 +0100

gtk+3.0 (3.24.1-1) experimental; urgency=medium

  * Team upload
  * New upstream release
    - Bump GLib build-dependency to 2.53.4 as per configure.ac
    - d/p/Revert-imwayland-clear-preedit-on-focus-out.patch:
      Remove, rely on the upstream fix for #908120 instead
    - d/p/GtkApplication-Fix-CRITICAL-on-shutdown-when-register_ses.patch,
      d/p/Fix-portal-path-handling.patch: Remove, applied upstream
  * Build installed-tests
    - Install them in gtk-3-examples for now to avoid the NEW queue
  * d/p/no-accessibility-dump.patch: Drop, no longer needed.
    The build-time tests correctly set GTK_CSD=1 now.
  * Stop marking some reftests as known failures. They now succeed on
    all release architectures.
    - d/p/reftest-known-fail.patch: Drop, no longer needed
  * Run installed-tests as autopkgtests (Closes: #908440)
    - Run a11ystate.test separately and mark it as flaky for now due to a
      known failure: state/focus1.ui passes in a desktop session but fails
      in a minimal autopkgtest VM
  * Sort dependency lists (wrap-and-sort -a)
  * d/gtk-3-examples.install: Sort file list (wrap-and-sort -a)
  * Use the same Xvfb screen configuration as in the upstream GTK+ 4
    Gitlab-CI tests. This will hopefully make GLX work (see also #874077)
  * Update d/gbp.conf from glib2.0
  * Temporarily (Build-)Depend on libgl1-mesa-dev and libegl1-mesa-dev to
    work around #909173 in libepoxy
  * d/rules: Make it clearer that we respect the nocheck option
  * d/copyright: Fix some lintian warnings